# infrastructure-take-home

./: .gitignore  Makefile  README.md  fly.toml  pyproject.toml
baseten_infra_take_home/: main.py  remote_server.py
